@@ -37,6 +37,21 @@ name|common
 operator|.
 name|util
 operator|.
+name|ExecutorUtil
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
 name|NamedList
 import|;
 end_import
@@ -51,6 +66,19 @@ operator|.
 name|util
 operator|.
 name|ConcurrentLFUCache
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|util
+operator|.
+name|DefaultSolrThreadFactory
 import|;
 end_import
 begin_import
@@ -118,6 +146,41 @@ operator|.
 name|util
 operator|.
 name|Map
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ExecutorService
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|TimeUnit
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|atomic
+operator|.
+name|AtomicReference
 import|;
 end_import
 begin_comment
@@ -2603,6 +2666,173 @@ name|destroy
 argument_list|()
 expr_stmt|;
 block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testConcurrentAccess
+specifier|public
+name|void
+name|testConcurrentAccess
+parameter_list|()
+throws|throws
+name|InterruptedException
+block|{
+comment|/* Set up a thread pool with twice as many threads as there are CPUs. */
+specifier|final
+name|ConcurrentLFUCache
+argument_list|<
+name|Integer
+argument_list|,
+name|Long
+argument_list|>
+name|cache
+init|=
+operator|new
+name|ConcurrentLFUCache
+argument_list|<>
+argument_list|(
+literal|10
+argument_list|,
+literal|9
+argument_list|)
+decl_stmt|;
+name|ExecutorService
+name|executorService
+init|=
+name|ExecutorUtil
+operator|.
+name|newMDCAwareFixedThreadPool
+argument_list|(
+literal|10
+argument_list|,
+operator|new
+name|DefaultSolrThreadFactory
+argument_list|(
+literal|"testConcurrentAccess"
+argument_list|)
+argument_list|)
+decl_stmt|;
+specifier|final
+name|AtomicReference
+argument_list|<
+name|Throwable
+argument_list|>
+name|error
+init|=
+operator|new
+name|AtomicReference
+argument_list|<>
+argument_list|()
+decl_stmt|;
+comment|/*      * Use the thread pool to execute at least two million puts into the cache.      * Without the fix on SOLR-7585, NoSuchElementException is thrown.      * Simultaneous calls to markAndSweep are protected from each other by a      * lock, so they run sequentially, and due to a problem in the previous      * design, the cache eviction doesn't work right.      */
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|atLeast
+argument_list|(
+literal|2_000_000
+argument_list|)
+condition|;
+operator|++
+name|i
+control|)
+block|{
+name|executorService
+operator|.
+name|submit
+argument_list|(
+operator|new
+name|Runnable
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+try|try
+block|{
+name|cache
+operator|.
+name|put
+argument_list|(
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+literal|100
+argument_list|)
+argument_list|,
+name|random
+argument_list|()
+operator|.
+name|nextLong
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|t
+parameter_list|)
+block|{
+name|error
+operator|.
+name|compareAndSet
+argument_list|(
+literal|null
+argument_list|,
+name|t
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+name|executorService
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+name|executorService
+operator|.
+name|awaitTermination
+argument_list|(
+literal|1
+argument_list|,
+name|TimeUnit
+operator|.
+name|MINUTES
+argument_list|)
+expr_stmt|;
+comment|// then:
+name|assertNull
+argument_list|(
+literal|"Exception during concurrent access: "
+operator|+
+name|error
+operator|.
+name|get
+argument_list|()
+argument_list|,
+name|error
+operator|.
+name|get
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 comment|// From the original LRU cache tests, they're commented out there too because they take a while.
 comment|//  void doPerfTest(int iter, int cacheSize, int maxKey) {
